[gd_scene format=3 uid="uid://dfntkb6231elb"]

[ext_resource type="Script" uid="uid://6eew4i52vyqe" path="res://Scripts/hud.gd" id="1_e0onf"]
[ext_resource type="Texture2D" uid="uid://7thdeskrquo" path="res://Assets/Player/Player.png" id="2_fccik"]

[node name="HUD" type="CanvasLayer" unique_id=2048825314]
script = ExtResource("1_e0onf")

[node name="Message" type="Label" parent="." unique_id=1016102851]
offset_left = 400.0
offset_top = 259.0
offset_right = 766.0
offset_bottom = 347.0
theme_override_font_sizes/font_size = 64
text = "GAME OVER"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Score" type="Label" parent="." unique_id=1827269886]
offset_left = 6.0
offset_top = -1.0
offset_right = 32.0
offset_bottom = 33.0
theme_override_font_sizes/font_size = 24
text = "0"
vertical_alignment = 1

[node name="Life3" type="Sprite2D" parent="." unique_id=2027533065]
texture_filter = 1
position = Vector2(1135, 15)
scale = Vector2(2, 2)
texture = ExtResource("2_fccik")

[node name="Life2" type="Sprite2D" parent="." unique_id=1648555749]
texture_filter = 1
position = Vector2(1104, 15)
scale = Vector2(2, 2)
texture = ExtResource("2_fccik")

[node name="Life1" type="Sprite2D" parent="." unique_id=1742219786]
texture_filter = 1
position = Vector2(1073, 15)
scale = Vector2(2, 2)
texture = ExtResource("2_fccik")
